Tue Mar  7 19:05:43 2000  Brian Gough  <bjg@network-theory.co.uk>

	* Makefile.am (noinst_LTLIBRARIES): with libtool blasnative and
 	blascblas layers need to be installed as additional libraries, not
 	in libgsl.a.

Fri Oct  1 15:50:14 1999  Brian Gough  <bjg@network-theory.co.uk>

	* blas.c: make use of "trailing dimension" in matrix struct to
 	support LDA arguments for level 2 BLAS.
