@@ -8,13 +8,16 @@
   size_t n;
   size_t i = 0;
   for(n=0; n<N; n++) {
-    BASE_TYPE axi = fabs(X[i]);
-    if(scale < axi) {
-      ssq   = 1.0 + ssq*(scale/axi)*(scale/axi);
-      scale = axi;
-    }
-    else {
-      ssq += (axi/scale)*(axi/scale);
+    const BASE_TYPE xi = X[i];
+    if (xi != 0) {
+      const BASE_TYPE axi = fabs(xi);
+      if(scale < axi) {
+        ssq   = 1.0 + ssq*(scale/axi)*(scale/axi);
+        scale = axi;
+      }
+      else {
+        ssq += (axi/scale)*(axi/scale);
+      }
     }
     i += incX;
   }
